Add delete example component - Add delete example component and pass it the example

--- a/app/templates/examples.hbs
+++ b/app/templates/examples.hbs
@@ -1,7 +1,7 @@
 <h2>Examples</h2>
 
 {{#each model as |example|}}
-<li>{{example.text}}</li>
+<li>{{example.text}} {{delete-example delete='deleteExample' example=example}}</li>
 {{/each}}
 <br>
 {{create-example create='createExample'}}
