Add example single view

--- a/app/templates/examples.hbs
+++ b/app/templates/examples.hbs
@@ -1,7 +1,7 @@
 <h2>Examples</h2>
 
 {{#each model as |example|}}
-<li>{{example.text}} {{delete-example delete='deleteExample' example=example}}</li>
+<li>{{#link-to 'example' example}}{{example.text}}{{/link-to}}</li>
 {{/each}}
 <br>
 {{create-example create='createExample'}}
