--- a/app/templates/example.hbs
+++ b/app/templates/example.hbs
@@ -1,5 +1,7 @@
 <h2>{{model.text}}</h2>
 
+{{update-example update='updateExample' example=model}}
+<br>
 {{delete-example delete='deleteExample' example=model}}
 <br>
 {{#link-to 'examples'}}Back to Examples{{/link-to}}
