--- a/app/templates/examples.hbs
+++ b/app/templates/examples.hbs
@@ -5,3 +5,39 @@
 {{/each}}
 <br>
 {{create-example create='createExample'}}
+<br>
+<br>
+{{#link-to 'week-one-repos'}}Week One{{/link-to}}
+<br>
+<br>
+{{#link-to 'week-two-repos'}}Week Two{{/link-to}}
+<br>
+<br>
+{{#link-to 'week-three-repos'}}Week Three{{/link-to}}
+<br>
+<br>
+{{#link-to 'week-four-repos'}}Week Four{{/link-to}}
+<br>
+<br>
+{{#link-to 'week-five-repos'}}Week Five{{/link-to}}
+<br>
+<br>
+{{#link-to 'week-six-repos'}}Week Six{{/link-to}}
+<br>
+<br>
+{{#link-to 'week-seven-repos'}}Week Seven{{/link-to}}
+<br>
+<br>
+{{#link-to 'week-eight-repos'}}Week Eight{{/link-to}}
+<br>
+<br>
+{{#link-to 'week-nine-repos'}}Week Nine{{/link-to}}
+<br>
+<br>
+{{#link-to 'week-ten-repos'}}Week Ten{{/link-to}}
+<br>
+<br>
+{{#link-to 'week-eleven-repos'}}Week Eleven{{/link-to}}
+<br>
+<br>
+{{#link-to 'week-twelve-repos'}}Week Twelve{{/link-to}}
